fixed search results z-index

--- a/src/app/journal/journal.component.scss
+++ b/src/app/journal/journal.component.scss
@@ -137,6 +137,8 @@
 
       width: 100%;
 
+      z-index: 99;
+
       background: #fff;
 
       border-radius: 0 0 5px 5px;
